[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DNAHash"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
  "pybloomer>=0.0.1",
]
authors = [
  {name = "Andrew DalPino", email = "support@andrewdalpino.com"},
]
description = "A specialized datastructure for counting short oligonucleotide sequences for use in Bioinformatics."
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/andrewdalpino/DNAHash"
Documentation = "https://github.com/andrewdalpino/DNAHash/README.md"
Source = "https://github.com/andrewdalpino/DNAHash"
